--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+body {
+  width: 1440px;
+  margin: 0 auto;
+}
+
 .header {
     width: 100%;
     max-width: 1440px;
